fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
     margin: 0;
     padding: 0;
 }
+
+
 #header{
     background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
 }
@@ -217,37 +219,38 @@ body{
         padding: 50px 20px;
     }
     #header-section2{
-        width: 352px;
-        height: 335px;
         display: flex;
         flex-direction: column;
-        margin-right: 0;
+        justify-content:space-between;
+        overflow-x: hidden;
     }
     #section2-div{
         display: flex;
         flex-direction: column;
         justify-content: start;
         align-items: start;
-        margin: 0px;
     }
     #header-section2-h1{
         width: 7em;
         height: 129px;
     }
     #first-p{
-        width: 274px;
-        height: 96px;
+        width: 19em;
+        height: 12em;
     }
     #first-button-div{
-        width: 350px;
-        height: 54px;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: start;
     }
     #section2-div2{
         background-image: url("images/Images\ 2.png");
         position: absolute;
-        top: 800px;
-        width: 349px;
-        height: 580px;
+        top: 50em;
+        left: .25em;
+        width: 22em;
+        height: 37em;
     }
     #div-child1, #div-child2{
         position: relative;
@@ -265,7 +268,7 @@ body{
         flex-direction: column;
         text-align: center;
         position: relative;
-        top: 900px;
+        top: 600px;
     }
     #main-div1-h1{
         font-size: 2em;
@@ -275,7 +278,7 @@ body{
     #main-div1-p1{
         font-size: 1em;
         width: 316px;
-    height: 72px;
+        height: 72px;
     }
     #section3{
         flex-direction: column;
